Fixed card overlap on navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -271,3 +271,6 @@ h6, .h6 {
   margin-left: 23rem;
 }
 
+.keep-away-nav {
+  margin-top: 5em;
+}
